# Unit_Converter_Pro_Interview_Task

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
Images/: ImageOne
app/: build.gradle.kts
app/src/androidTest/java/com/example/unitconverterpro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/converter/: Converter.cpp  Converter.h
app/src/main/cpp/jni/: NativeBridge.cpp  NativeBridge.h
app/src/main/java/com/example/unitconverterpro/: MainActivity.kt  NativeBridge.kt  UnitConverterApp.kt
app/src/main/java/com/example/unitconverterpro/data/: AppDatabase.kt  ConversionDao.kt  ConversionEntity.kt
app/src/main/java/com/example/unitconverterpro/ui/: ConverterScreen.kt  ConverterViewModel.kt  HistoryScreen.kt
app/src/main/java/com/example/unitconverterpro/ui/components/: ConvertButton.kt  UnitDropdown.kt  ValueInputField.kt
app/src/main/java/com/example/unitconverterpro/ui/models/: UnitCategory.kt
app/src/main/java/com/example/unitconverterpro/ui/theme/: Color.kt  Shapes.kt  Theme.kt  Typography.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/unitconverterpro/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
